[project]
name = "deep-creek-lake-view"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "gdal==3.13.1",
    "geopandas>=1.1.4",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "osmnx>=2.1.0",
    "pillow>=12.3.0",
    "pyproj>=3.7.2",
    "rasterio>=1.5.0",
    "requests>=2.34.2",
    "scipy>=1.18.0",
    "shapely>=2.1.2",
]
